ebus Daemon (ebusd) - ChangeLog
===============================

2013-04-08:
* Logging functions changed so it fits together with the behavior of logrotate.
* Fixed function eb_cmd_search_com_id so it compares class length too.

2013-03-28:
* Fixed daemon crash if some spaces was found behind command (without subcommands.)

2013-03-16:
* Fixed slave message CRC check for cyc messages.

2013-03-15:
* Improved cyc commands data handling so all parts from message could be decoded.
* Added new parameter d_part to element configuration part.
* Updated documantation.
* ebusd.init script (debian) slightly modified.

2013-03-06:
* Fixed extension for command files in configuration. A point is not necessary.

2013-03-03:
* Added debian init script ebusd.init to contrib.
* Fixed autogen.sh that it worked properly with bourne shell.

2013-03-01:
* Added new directory doc with some usefull documentation.
* Added an example command csv file into contrib directory.
* Changed width of class string from 5 to 20.

2013-02-28:
* Added loglevel as telnet command to change logging level at runtime.
* Moved eb_cmd* functions from ebus-bus file to new ebus-cmd file.
* Added many explicit casts to remove compiler warnings.

2013-02-27:
* Fixed memory leak in eb_raw_print_hex twice.
* Added new config parameter print_size to adjust number of bytes at output stream.

2013-02-25:
* Fixed possible memory leaks in eb_raw_print_hex and eb_search_cyc

2013-02-22:
* Added <cr> too each client answer (no need of special config for putty)
* Minor print cosmetic with cyc commands on Master Slave types 

2013-02-21:
* Improved decoding of cyc commands to all ebus message types.
* Added function eb_cyc_data_process to decode all cyc ebus message types.
* Removed hex bitmask of logging output.
* Fixed uninitialized buffer in eb_cyc_data_recv.

2013-02-19:
* Added some usefull description of ebusd to README

2013-02-18: