@@ -1,0 +1,6 @@
+# /etc/conf.d/ebusd: config file for /etc/init.d/ebusd
+
+# Options to pass to the ebusd daemon.
+# See the ebusd -h for more info.
+
+EBUSD_ARGS=""
